force-app/main/default/objects/Traceability__c/Traceability__c.object-meta.xml
<CustomObject>
    <description>This object is dedicated to ICONICS in order to have a legal history of differents actions done on &quot;order&quot; or &quot;shipping group&quot;</description>
    <label>Traceability</label>
    <nameField>
        <label>Traceability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Traceabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>