force-app/main/default/objects/Traceability__c/fields/AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInformation__c</fullName>
    <description>Save in this field every information that need to be historicized</description>
    <label>Additional information</label>
    <type>TextArea</type>
</CustomField>