force-app/main/default/objects/Traceability__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Traceabilities</relationshipLabel>
    <relationshipName>Traceabilities</relationshipName>
    <type>Lookup</type>
</CustomField>