force-app/main/default/objects/Traceability__c/fields/OrderShipping__c.field-meta.xml
<CustomField>
    <fullName>OrderShipping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Shipping</label>
    <referenceTo>OrderShipping__c</referenceTo>
    <relationshipLabel>Traceabilities</relationshipLabel>
    <relationshipName>Traceabilities</relationshipName>
    <type>Lookup</type>
</CustomField>