force-app/main/default/objects/Traceability__c/fields/SubmitedBy__c.field-meta.xml
<CustomField>
    <fullName>SubmitedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submited By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Traceabilities</relationshipName>
    <type>Lookup</type>
</CustomField>