force-app/main/default/objects/Traceability__c/fields/Tech_SubmitedBy_Name__c.field-meta.xml
<CustomField>
    <fullName>Tech_SubmitedBy_Name__c</fullName>
    <formula>SubmitedBy__r.FirstName + &apos; &apos; + SubmitedBy__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Submited By Name</label>
    <type>Text</type>
</CustomField>